hcc/tests/conform/errors/parse/if_missing_paren.hc
//@ error: expected `(`
#include <stdlib.hh>
U0 Main()
{
  if 1 { }
}
